--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,22 @@ body {
   background-color: #2c2f33;
 }
 
+#tommy {
+  opacity: 1;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+
+div{
+    transition:width 1s ease-in-out;
+}
+
+#tommydiv {
+  top: 0;
+  width: 100%;
+  transition: 0.2s;
+}
